# data-science-ghcp

./: .dockerignore  Dockerfile  README.md  dump.py  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: DataAnalyzer.agent.md  DeploymentAdvisor.agent.md  FeatureEngineer.agent.md  ModelEvaluator.agent.md  ModelTrainer.agent.md
.github/instructions/: notebooks.instructions.md
.github/prompts/: eda-summary-prompt.md
.github/skills/eda-summary-report/: SKILL.md
data/processed/: churn_masked.parquet  test.parquet  train.parquet  val.parquet
deploy/: conda.yml
deploy/azureml/: deployment.yml  endpoint.yml
mlruns/0/: meta.yaml
mlruns/803164375223877011/: meta.yaml
mlruns/803164375223877011/00e9d57cd5254f08aa64f5c3bf874939/: meta.yaml
mlruns/803164375223877011/06db443c34184eb4b048b7af3efafbbd/: meta.yaml
mlruns/803164375223877011/093de9d1b8964df69b0b0a10578c6f3f/: meta.yaml
mlruns/803164375223877011/0b7ede44d42d47fda82c40d6b973c4d6/: meta.yaml
mlruns/803164375223877011/0d12cdc1ba8847ceb8934bfd49fd3143/: meta.yaml
mlruns/803164375223877011/0fddc3c581c0457fa74c5cc3f0a3dbd4/: meta.yaml
mlruns/803164375223877011/0ff5815f07634fb7a17ba8abdb03c41f/: meta.yaml
models/: best_model.joblib  decision_policy.json  preprocessor.joblib
notebooks/: 01_eda.ipynb  03_training.ipynb
reports/: data_quality.md  deployment_plan.md  evaluation.json  evaluation.md  features.md  metrics.json
scoring/: score.py
src/features/: pipeline.py
src/serve/: app.py  policy.py
src/train/: evaluator.py  trainer.py
(+717 files in other folders)
